test/error-parse/dev/stderr.txt

Project Directory: /.../test/error-parse
Mode: development
Call Stack:
	'./a' from module: index.js	
'./index.js' from module: $fp$main
Processing Module: a.js

[0;31mParse Error
[0m[1;36m/.../test/error-parse/a.js[0m

--------------------
Unexpected token ; at (3:14) - (3:15):

 1 │ // missing second half of addition
 2 │ function hello() {
 3 │   "§ © Æ ¿" + ;
   │               ^
 4 │ }


--------------------
Unexpected identifier at (10:6) - (10:11):

 8 │ 
 9 │ 
10 │ let a aaaaa = 5;
   │       ^^^^^
11 │ export default hello;

